--- a/frontend/ignition-hacks/src/components/Landing.css
+++ b/frontend/ignition-hacks/src/components/Landing.css
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 .landing {
     overflow: hidden;
+}
+.landing-page {
+  background: 
+    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), /* Black overlay with 50% opacity */
+    url('../assets/bg.gif') no-repeat center center fixed; /* Background image */
+  background-size: cover;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
@@ -27,17 +40,20 @@ button {
   line-height: 10vw;
   color: #DAEBF4;
   margin-bottom: 40px; /* Add space below the animated text */
+  font-weight: 800;
 }
 
 .desc {
   text-align: center;
   color: #DAEBF4; 
   margin-bottom: 40px; /* Add space below the description */
+  font-size: 2rem; /* Adjust the font size as needed */
+  font-family: 'Ubuntu', sans-serif; /* Change the font family */
 }
 
 .letter {
   display: inline-block;
-  --wght: 100;
+  --wght: 900;
   --wdth: 85;
   --opacity: 0.25;
   --letter-spacing: 0;
