home changes and background colour change

--- a/frontend/ignition-hacks/src/App.css
+++ b/frontend/ignition-hacks/src/App.css
@@ -1,6 +1,6 @@
 
 .App-header {
-  background-color: #003044;
+  background-color: #181b1c;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
