--- a/frontend/ignition-hacks/src/components/Signup.css
+++ b/frontend/ignition-hacks/src/components/Signup.css
@@ -58,14 +58,16 @@
 
 .center-wrap {
     position: absolute;
-    width: 100%;
+    width: 70%; /* Adjust width to make the form less wide */
     padding: 0 35px;
+    padding-bottom: 20px; /* Add bottom padding */
     top: 50%;
-    left: 0;
-    transform: translate3d(0, -50%, 35px) perspective(100px);
+    left: 0; /* Align to the left */
+    transform: translate3d(0, -50%, 15px) perspective(100px);
     z-index: 20;
     display: block;
 }
+
 
 .form-group {
     position: relative;
@@ -155,6 +157,7 @@
 }
 
 .btn {
+    margin-top: 10px; /* Add top margin to the submit button */
     border-radius: 4px;
     height: 44px;
     font-size: 13px;
@@ -162,7 +165,7 @@
     text-transform: uppercase;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
-    padding: 0 30px;
+    padding: 10px 30px; /* Add top padding */
     letter-spacing: 1px;
     display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
@@ -183,6 +186,7 @@
     box-shadow: 0 8px 24px 0 rgba(255, 235, 167, .2);
 }
 
+
 .btn:active,
 .btn:focus {
     background-color: #102770;
@@ -195,7 +199,6 @@
     color: #ffeba7;
     box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
 }
-
 
 .alert {
     margin-top: 60px;
