--- a/frontend/ignition-hacks/src/components/Output.css
+++ b/frontend/ignition-hacks/src/components/Output.css
@@ -1,108 +1,3 @@
-/* Star Animation Styles */
-#stars, #stars2, #stars3 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0; /* Ensure stars are in the background */
-}
-
-#stars {
-  width: 1px;
-  height: 1px;
-  background: transparent;
-  box-shadow: 0px 0px 2px 1px #FFF, 
-              400px 200px 2px 1px #FFF, 
-              800px 400px 2px 1px #FFF, 
-              1200px 600px 2px 1px #FFF, 
-              1600px 800px 2px 1px #FFF,
-              2000px 1000px 2px 1px #FFF,
-              -400px 200px 2px 1px #FFF, 
-              -800px 400px 2px 1px #FFF, 
-              -1200px 600px 2px 1px #FFF, 
-              -1600px 800px 2px 1px #FFF,
-              -2000px 1000px 2px 1px #FFF;
-  animation: animStar 30s linear infinite;
-}
-
-#stars:after {
-  content: " ";
-  position: absolute;
-  top: 2000px;
-  width: 1px;
-  height: 1px;
-  background: transparent;
-  box-shadow: inherit;
-}
-
-#stars2 {
-  width: 2px;
-  height: 2px;
-  background: transparent;
-  box-shadow: 0px 0px 3px 2px #FFF, 
-              350px 150px 3px 2px #FFF, 
-              700px 300px 3px 2px #FFF, 
-              1050px 450px 3px 2px #FFF, 
-              1400px 600px 3px 2px #FFF,
-              1750px 750px 3px 2px #FFF,
-              -350px 150px 3px 2px #FFF, 
-              -700px 300px 3px 2px #FFF, 
-              -1050px 450px 3px 2px #FFF, 
-              -1400px 600px 3px 2px #FFF,
-              -1750px 750px 3px 2px #FFF;
-  animation: animStar 60s linear infinite;
-}
-
-#stars2:after {
-  content: " ";
-  position: absolute;
-  top: 2000px;
-  width: 2px;
-  height: 2px;
-  background: transparent;
-  box-shadow: inherit;
-}
-
-#stars3 {
-  width: 3px;
-  height: 3px;
-  background: transparent;
-  box-shadow: 0px 0px 4px 3px #FFF, 
-              300px 100px 4px 3px #FFF, 
-              600px 200px 4px 3px #FFF, 
-              900px 300px 4px 3px #FFF, 
-              1200px 400px 4px 3px #FFF,
-              1500px 500px 4px 3px #FFF,
-              -300px 100px 4px 3px #FFF, 
-              -600px 200px 4px 3px #FFF, 
-              -900px 300px 4px 3px #FFF, 
-              -1200px 400px 4px 3px #FFF,
-              -1500px 500px 4px 3px #FFF;
-  animation: animStar 90s linear infinite;
-}
-
-#stars3:after {
-  content: " ";
-  position: absolute;
-  top: 2000px;
-  width: 3px;
-  height: 3px;
-  background: transparent;
-  box-shadow: inherit;
-}
-
-@keyframes animStar {
-  from {
-    transform: translateY(0px);
-  }
-  to {
-    transform: translateY(-2000px);
-  }
-}
-
-/* Existing Styles */
-
 /* Flip Card Styles */
 .flip-card {
   width: 700px; /* Updated width */
@@ -111,6 +6,7 @@
   cursor: pointer;
   position: relative;
   z-index: 1; /* Ensure cards appear above stars */
+  background-image: url('https://www.transparenttextures.com/patterns/brushed-aluminum.png'); /* Add a subtle texture */
 }
 
 .flip-card-inner {
@@ -133,19 +29,22 @@
   backface-visibility: hidden;
   display: flex;
   justify-content: center;
+  text-align: left;
+  line-height: 1.5;
   align-items: center;
   border: 1px solid #ccc;
   border-radius: 10px;
-  font-size: 24px;
+  font-size: 10px;
   color: black; /* Black font color */
+  font-family: 'Arial', sans-serif; /* Add your desired font-family here */
 }
 
 .flip-card-front {
-  background-color: #f0f0f0;
+  background: linear-gradient(to bottom, #B6D3E3, #ffffff);
 }
 
 .flip-card-back {
-  background-color: #B6D3E3;
+  background: linear-gradient(to bottom, #B6D3E3, #ffffff);
   transform: rotateY(180deg);
 }
 
